--- a/Crime-Analysis.ipynb
+++ b/Crime-Analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1897449/3746609399.py:2: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  data = pd.read_csv('crime.csv', encoding='iso-8859-1')\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the dataset\n",
     "data = pd.read_csv('crime.csv', encoding='iso-8859-1')"
@@ -62,9 +71,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>INCIDENT_NUMBER</th>\n",
+       "      <th>OFFENSE_CODE</th>\n",
+       "      <th>OFFENSE_CODE_GROUP</th>\n",
+       "      <th>OFFENSE_DESCRIPTION</th>\n",
+       "      <th>DISTRICT</th>\n",
+       "      <th>REPORTING_AREA</th>\n",
+       "      <th>SHOOTING</th>\n",
+       "      <th>OCCURRED_ON_DATE</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>MONTH</th>\n",
+       "      <th>DAY_OF_WEEK</th>\n",
+       "      <th>HOUR</th>\n",
+       "      <th>UCR_PART</th>\n",
+       "      <th>STREET</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>Location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [INCIDENT_NUMBER, OFFENSE_CODE, OFFENSE_CODE_GROUP, OFFENSE_DESCRIPTION, DISTRICT, REPORTING_AREA, SHOOTING, OCCURRED_ON_DATE, YEAR, MONTH, DAY_OF_WEEK, HOUR, UCR_PART, STREET, Lat, Long, Location]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Data reduction\n",
     "imputer_c = SimpleImputer(strategy='constant')\n",
@@ -82,18 +147,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with '/bin/python3' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
+     "data": {
+      "text/plain": [
+       "0              ARLINGTON ST\n",
+       "1                ALLSTON ST\n",
+       "2                  DEVON ST\n",
+       "3              CAMBRIDGE ST\n",
+       "4               PRESCOTT ST\n",
+       "                ...        \n",
+       "327815          COVENTRY ST\n",
+       "327816             RIVER ST\n",
+       "327817             RIVER ST\n",
+       "327818    NEW WASHINGTON ST\n",
+       "327819        WASHINGTON ST\n",
+       "Name: STREET, Length: 327820, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -127,7 +203,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
   "orig_nbformat": 4
