--- a/Crime-Analysis.ipynb
+++ b/Crime-Analysis.ipynb
@@ -193,7 +193,42 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Then we remove the outliers with the help of outliers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_columns = ['Lat', 'Long']  # Add other numeric columns as needed\n",
+    "z_scores = np.abs((data[numeric_columns] - data[numeric_columns].mean()) / data[numeric_columns].std())\n",
+    "data = data[(z_scores < 3).all(axis=1)]  # Set the z-score threshold as needed"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we delete the stop words and do stemming."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nltk.download('wordnet')    # just downloading the stopwords\n",
+    "stemmer = PorterStemmer()\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "data['OFFENSE_DESCRIPTION'] = data['OFFENSE_DESCRIPTION'].apply(lambda x: ' '.join([lemmatizer.lemmatize(word) for word in x.split() if word not in stop_words]))"
+   ]
   }
  ],
  "metadata": {
